<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".MainActivity">

    <!--    /*conta a pagar*/ -->

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/a_pagar"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_a_pagar"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_a_pagar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="1dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="0.00"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_porcentagem"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


    <!--    /*taxa*/ -->

    <TextView
        android:id="@+id/tv_porcentagem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/taxa_servico"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_a_pagar" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_pessoa"
        app:layout_constraintTop_toBottomOf="@+id/tv_porcentagem">

        <Button
            android:id="@+id/b_porcentagem_sub"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="-"
            android:contentDescription="@string/sub_porcentagem"
            android:textColor="@color/design_default_color_primary"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/tv_porcentagem_valor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="0%"
            android:contentDescription="@string/area_servico"
            android:textColor="@color/black"
            android:textSize="32sp" />

        <Button
            android:id="@+id/b_porcentagem_add"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="+"
            android:contentDescription="@string/add_porcentagem"
            android:textColor="@color/design_default_color_primary"
            android:textSize="32sp" />
    </LinearLayout>

    <!--    /*pessoa*/ -->
    <TextView
        android:id="@+id/tv_pessoa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pessoas"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/linearLayout4"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_total_porcentagem"
        app:layout_constraintTop_toBottomOf="@+id/tv_pessoa">

        <Button
            android:id="@+id/b_pessoa_sub"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="-"
            android:contentDescription="@string/sub_pessoa"
            android:textColor="@color/design_default_color_primary"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/tv_pessqa_qtd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="0"
            android:contentDescription="@string/pessoas_qtd"
            android:textColor="@color/black"
            android:textSize="32sp" />

        <Button
            android:id="@+id/b_pessoa_add"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="+"
            android:contentDescription="@string/add_pessoa"
            android:textColor="@color/design_default_color_primary"
            android:textSize="32sp" />
    </LinearLayout>

    <!-- //valores calculados// -->

    <TextView
        android:id="@+id/tv_total_porcentagem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:text="@string/valor_servico"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_valor_total_porcentagem"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />

    <TextView
        android:id="@+id/tv_valor_total_porcentagem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="0,00"
        android:contentDescription="@string/valor_servico"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_total"
        app:layout_constraintTop_toBottomOf="@+id/tv_total_porcentagem" />

    <TextView
        android:id="@+id/tv_total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:text="@string/valor_pessoa"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_valor_total"
        app:layout_constraintTop_toBottomOf="@+id/tv_valor_total_porcentagem" />

    <TextView
        android:id="@+id/tv_valor_total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="0,00"
        android:contentDescription="@string/valor_pessoa"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/b_compartilhar"
        app:layout_constraintTop_toBottomOf="@+id/tv_total" />

    <Button
        android:id="@+id/b_compartilhar"
        android:layout_width="371dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:text="@string/compartilhar"
        android:contentDescription="@string/compartilhar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_valor_total" />


</androidx.constraintlayout.widget.ConstraintLayout>